--- a/order.html
+++ b/order.html
@@ -6,6 +6,12 @@
   <title>CoreBots – Order</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
+  
+  <!-- PayPal SDK (Plan A + Plan B) -->
+  <script 
+    src="https://www.paypal.com/sdk/js?client-id=BAAGUcEuqfPsx0OwbOQNH0dY9k51PL0alaVUUFdoFhx7K-PCuh2_cjom2eIx_QzdutlBdFu9uomTYjDdtQ&components=hosted-buttons&disable-funding=venmo&currency=USD">
+  </script>
+  <script src="https://www.paypal.com/sdk/js?client-id=AX_eRCZCIA0PaFPnzMTCzKFBVlnUF75dABEvDT6N6fBv1DuoC_69uhUvg6Meh5B9Z8KRYUUsgpWys77l&vault=true&intent=subscription" data-sdk-integration-source="button-factory"></script>
 </head>
 <body>
 
@@ -19,44 +25,84 @@
   </nav>
 
   <main>
-  <section class="order-section">
-    <h2>How to Order</h2>
+    <section class="order-section">
+      <h2>How to Order</h2>
 
-    <div class="disclaimer">
-      Before ordering please read our order policy to avoid any problems.
-    </div>
+      <div class="disclaimer">
+        Before ordering please read our order policy to avoid any problems.
+      </div>
 
-    <div class="steps-box">
-      <h3>Steps to Order</h3>
-      <ol>
-        <li>Join our Discord server.</li>
-        <li>Create a ticket in the order channel.</li>
-        <li>Wait for someone to assist you.</li>
-      </ol>
-    </div>
+      <div class="steps-box">
+        <h3>Steps to Order</h3>
+        <ol>
+          <li>Join our Discord server.</li>
+          <li>Create a ticket in the order channel.</li>
+          <li>Send proof of your PayPal payment.</li>
+        </ol>
+      </div>
 
-    <a href="https://discord.gg/PeUB26RtKx" target="_blank" rel="noopener">
-      <button class="discord-button">Join Discord</button>
-    </a>
+      <a href="https://discord.gg/PeUB26RtKx" target="_blank" rel="noopener">
+        <button class="discord-button">Join Discord</button>
+      </a>
 
-    <section class="payment-reminder">
-    <h3>Payment Method</h3>
-    <p>We only accept payments via <strong>Paypal</strong> only.</p>
-    <p>All transactions are securely processed through our business account.</p>
-  </section>
+      <section class="payment-reminder">
+        <h3>Payment Method</h3>
+        <p>We only accept payments via <strong>PayPal</strong>.</p>
+        <p>All transactions are securely processed through our business account.</p>
+      </section>
 
-    <section class="benefits">
-      <h3>Why Order From Us?</h3>
-      <ul>
-        <li>Setup within 24h-48h</li>
-        <li>Friendly developers</li>
-        <li>Trusted bot systems</li>
-        <li>Secure payments & great service</li>
-      </ul>
+      <section class="paypal-order">
+        <h3>Choose a Plan to Purchase</h3>
+
+        <!-- Plan A -->
+        <div class="paypal-plan">
+          <h4>Plan A – Code Only ($5.99 one-time)</h4>
+          <p>Just the source code. No hosting or support included.</p>
+          <div id="paypal-container-QPKYDHKT7DZ9U"></div>
+          <script>
+            paypal.HostedButtons({
+              hostedButtonId: "QPKYDHKT7DZ9U",
+            }).render("#paypal-container-QPKYDHKT7DZ9U");
+          </script>
+        </div>
+
+        <!-- Plan B -->
+        <div class="paypal-plan">
+          <h4>Plan B – Code + Hosting + Support ($6.99/month)</h4>
+          <p>Includes code, hosting, updates, and setup help.</p>
+          <div id="paypal-button-container-P-0CA68502J79848250NB4XJXI"></div>
+          <script>
+            paypal.Buttons({
+              style: {
+                  shape: 'rect',
+                  color: 'gold',
+                  layout: 'horizontal',
+                  label: 'subscribe'
+              },
+              createSubscription: function(data, actions) {
+                return actions.subscription.create({
+                  plan_id: 'P-0CA68502J79848250NB4XJXI'
+                });
+              },
+              onApprove: function(data, actions) {
+                alert("Thank you for subscribing! Subscription ID: " + data.subscriptionID);
+              }
+            }).render('#paypal-button-container-P-0CA68502J79848250NB4XJXI');
+          </script>
+        </div>
+      </section>
+
+      <section class="benefits">
+        <h3>Why Order From Us?</h3>
+        <ul>
+          <li>Setup within 24h–48h</li>
+          <li>Friendly developers</li>
+          <li>Trusted bot systems</li>
+          <li>Secure payments & great service</li>
+        </ul>
+      </section>
     </section>
-  </section>
-</main>
-
+  </main>
 
   <footer>
     &copy; 2025 CoreBots. All rights reserved.
