--- a/plans.html
+++ b/plans.html
@@ -30,13 +30,9 @@
       <h3>Plan B – Code + Hosting + Support</h3>
       <p>We'll host your bot, offer basic setup help, and updates.</p>
       <p>Same command set, but with active support & uptime.</p>
-      <p class="price">*$6.99/month</p> 
+      <p class="price">$6.99/month</p> 
     </div>
    </section>
-
-  <p class="disclaimer">
-    * The monthly price might change depending on server size as we have to keep that in mind for hosting.
-  </p>
 
   <section class="payment-methods">
     <h3>Payment Methods</h3>
