--- a/order.html
+++ b/order.html
@@ -35,29 +35,18 @@
     <div class="steps-box">
       <h3>Steps to Order</h3>
       <ol>
-        <li>Join our Discord server.</li>
-        <li>Create a ticket in the order channel.</li>
-        <li>Wait for someone to assist you.</li>
+        <li>Click the continue to order button below this box.</li>
+        <li>Choose the plan that you are interested in.</li>
+        <li>Follow further instructions after ordering.</li>
       </ol>
     </div>
 
-    <a href="https://discord.gg/PeUB26RtKx" target="_blank" rel="noopener">
-      <button class="discord-button">Join Discord</button>
-    </a>
-
     <!-- ✅ Continue Button -->
     <div class="continue-box">
-      <p>Already familiar with our process?</p>
       <a href="payment.html">
         <button class="continue-button">Continue to Order</button>
       </a>
     </div>
-
-    <section class="payment-reminder">
-      <h3>Payment Method</h3>
-      <p>We only accept payments via <strong>PayPal</strong>.</p>
-      <p>All transactions are securely processed through our business account.</p>
-    </section>
 
     <section class="benefits">
       <h3>Why Order From Us?</h3>
