--- a/payment.html
+++ b/payment.html
@@ -39,9 +39,9 @@
 
         <!-- Plan B -->
         <div class="plan-card">
-          <h4>Plan B – Hosted + Support</h4>
-          <p class="plan-desc">Includes hosting, updates, and full support.</p>
-          <p class="plan-price">$6.99/month</p>
+          <h4>Plan B – Full Bot, Hosted + Support</h4>
+          <p class="plan-desc">Includes hosting, customized bot, and full support.</p>
+          <p class="plan-price">$7.99/month</p>
           <div id="paypal-button-container-P-0CA68502J79848250NB4XJXI"></div>
           <script>
             paypal.Buttons({
