--- a/payment.html
+++ b/payment.html
@@ -6,6 +6,8 @@
   <title>CoreBots – Payment</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
+
+  <!-- Load PayPal SDK only ONCE with required components -->
   <script src="https://www.paypal.com/sdk/js?client-id=AcKSVLi69rOCBf5k9EHs68D6uYBWso4OwdhqCGVol4TeBPwqKMCK8Ygz65R-EMoBHC1e-bR-i2ejNkzR&components=buttons,hosted-buttons&vault=true&intent=subscription"></script>
 </head>
 <body>
@@ -23,41 +25,21 @@
     <section class="paypal-order">
       <h3>Choose a Plan to Purchase</h3>
       <div class="plan-selection">
-        
-        <!-- Plan A -->
-<div class="plan-card">
-  <h4>Plan A – Code Only</h4>
-  <p class="plan-desc">Source code only. No hosting or support.</p>
-  <p class="plan-price">$5.99 one-time</p>
-  <div id="paypal-button-planA"></div>
-  <script>
-    paypal.Buttons({
-      style: {
-        shape: 'rect',
-        color: 'gold',
-        layout: 'horizontal',
-        label: 'pay'
-      },
-      createOrder: function(data, actions) {
-        return actions.order.create({
-          purchase_units: [{
-            amount: {
-              value: '5.99'
-            },
-            description: 'Plan A – Code Only'
-          }]
-        });
-      },
-      onApprove: function(data, actions) {
-        return actions.order.capture().then(function(details) {
-          alert('Thanks for your purchase, ' + details.payer.name.given_name + '!');
-        });
-      }
-    }).render('#paypal-button-planA');
-  </script>
-</div>
 
-        <!-- Plan B -->
+        <!-- Plan A: Hosted Button -->
+        <div class="plan-card">
+          <h4>Plan A – Code Only</h4>
+          <p class="plan-desc">Source code only. No hosting or support.</p>
+          <p class="plan-price">$5.99 one-time</p>
+          <div id="paypal-container-QPKYDHKT7DZ9U"></div>
+          <script>
+            paypal.HostedButtons({
+              hostedButtonId: "QPKYDHKT7DZ9U",
+            }).render("#paypal-container-QPKYDHKT7DZ9U");
+          </script>
+        </div>
+
+        <!-- Plan B: Subscription Button -->
         <div class="plan-card">
           <h4>Plan B – Full Bot, Hosted + Support</h4>
           <p class="plan-desc">Includes hosting, customized bot, and full support.</p>
