--- a/payment.html
+++ b/payment.html
@@ -26,19 +26,38 @@
       <h3>Choose a Plan to Purchase</h3>
       <div class="plan-selection">
 
-        <!-- Plan A: Hosted Button -->
-        <div class="plan-card">
-          <h4>Plan A – Code Only</h4>
-          <p class="plan-desc">Source code only. No hosting or support.</p>
-          <p class="plan-price">$5.99 one-time</p>
-          <div id="paypal-container-QPKYDHKT7DZ9U"></div>
-          <script>
-            paypal.HostedButtons({
-              hostedButtonId: "QPKYDHKT7DZ9U",
-            }).render("#paypal-container-QPKYDHKT7DZ9U");
-          </script>
-        </div>
+        <!-- Plan A: Hosted Button (HTML Form Version) -->
+<div class="plan-card">
+  <h4>Plan A – Code Only</h4>
+  <p class="plan-desc">Source code only. No hosting or support.</p>
+  <p class="plan-price">$5.99 one-time</p>
 
+  <style>
+    .pp-QPKYDHKT7DZ9U {
+      text-align: center;
+      border: none;
+      border-radius: 0.25rem;
+      min-width: 11.625rem;
+      padding: 0 2rem;
+      height: 2.625rem;
+      font-weight: bold;
+      background-color: #FFD140;
+      color: #000000;
+      font-family: "Helvetica Neue", Arial, sans-serif;
+      font-size: 1rem;
+      line-height: 1.25rem;
+      cursor: pointer;
+    }
+  </style>
+
+  <form action="https://www.paypal.com/ncp/payment/QPKYDHKT7DZ9U" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+    <input class="pp-QPKYDHKT7DZ9U" type="submit" value="Pay Now" />
+    <img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
+    <section style="font-size: 0.75rem;">
+      Powered by 
+      <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;" />
+  </form>
+</div>
         <!-- Plan B: Subscription Button -->
         <div class="plan-card">
           <h4>Plan B – Full Bot, Hosted + Support</h4>
