--- a/payment.html
+++ b/payment.html
@@ -6,9 +6,6 @@
   <title>CoreBots – Payment</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
-
-  <!-- Load PayPal SDK only ONCE with required components -->
-  <script src="https://www.paypal.com/sdk/js?client-id=AX_eRCZCIA0PaFPnzMTCzKFBVlnUF75dABEvDT6N6fBv1DuoC_69uhUvg6Meh5B9Z8KRYUUsgpWys77l&components=buttons,hosted-buttons&vault=true&intent=subscription"></script>
 </head>
 <body>
 
@@ -64,24 +61,26 @@
           <p class="plan-desc">Includes hosting, customized bot, and full support.</p>
           <p class="plan-price">$7.99/month</p>
           <div id="paypal-button-container-P-0CA68502J79848250NB4XJXI"></div>
-          <script>
-            paypal.Buttons({
-              style: {
-                shape: 'rect',
-                color: 'gold',
-                layout: 'horizontal',
-                label: 'subscribe'
-              },
-              createSubscription: function(data, actions) {
-                return actions.subscription.create({
-                  plan_id: 'P-0CA68502J79848250NB4XJXI'
-                });
-              },
-              onApprove: function(data, actions) {
-                alert("Thanks for subscribing! ID: " + data.subscriptionID);
-              }
-            }).render('#paypal-button-container-P-0CA68502J79848250NB4XJXI');
-          </script>
+<script src="https://www.paypal.com/sdk/js?client-id=AX_eRCZCIA0PaFPnzMTCzKFBVlnUF75dABEvDT6N6fBv1DuoC_69uhUvg6Meh5B9Z8KRYUUsgpWys77l&vault=true&intent=subscription" data-sdk-integration-source="button-factory"></script>
+<script>
+  paypal.Buttons({
+      style: {
+          shape: 'rect',
+          color: 'gold',
+          layout: 'vertical',
+          label: 'paypal'
+      },
+      createSubscription: function(data, actions) {
+        return actions.subscription.create({
+          /* Creates the subscription */
+          plan_id: 'P-0CA68502J79848250NB4XJXI'
+        });
+      },
+      onApprove: function(data, actions) {
+        alert(data.subscriptionID); // You can add optional success message for the subscriber here
+      }
+  }).render('#paypal-button-container-P-0CA68502J79848250NB4XJXI'); // Renders the PayPal button
+</script>
         </div>
 
       </div>
