--- a/after_payment.html
+++ b/after_payment.html
@@ -6,7 +6,10 @@
   <title>Thank You – CoreBots</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
+  
   <style>
+
+    
     body {
       font-family: 'Inter', sans-serif;
       background-color: #f8f9fb;
@@ -77,6 +80,14 @@
       color: #777;
     }
   </style>
+<nav>
+    <h1><a href="index.html" class="logo-link">CoreBots</a></h1>
+    <ul>
+      <li><a href="plans.html">Plans</a></li>
+      <li><a href="order.html">Order</a></li>
+      <li><a href="faq.html">FAQ</a></li>
+    </ul>
+  </nav>
 </head>
 <body>
 
