--- a/after_payment.html
+++ b/after_payment.html
@@ -8,8 +8,6 @@
   <link rel="stylesheet" href="style.css" />
   
   <style>
-
-    
     body {
       font-family: 'Inter', sans-serif;
       background-color: #f8f9fb;
@@ -19,6 +17,41 @@
       flex-direction: column;
       min-height: 100vh;
     }
+
+    nav {
+      background-color: #fff;
+      border-bottom: 1px solid #ddd;
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    nav h1 {
+      margin: 0;
+    }
+
+    nav .logo-link {
+      color: #2c2f48;
+      text-decoration: none;
+      font-weight: 800;
+      font-size: 1.5rem;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 1.5rem;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav ul li a {
+      color: #2c2f48;
+      text-decoration: none;
+      font-weight: 600;
+    }
+
     main {
       flex-grow: 1;
       display: flex;
@@ -26,38 +59,47 @@
       justify-content: center;
       padding: 2rem;
     }
+
     .thank-you-box {
       background: #ffffff;
       padding: 2rem 2.5rem;
       border-radius: 12px;
-      max-width: 600px;
+      max-width: 500px;
       width: 100%;
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
       text-align: center;
     }
+
     .thank-you-box h2 {
       font-size: 2rem;
       margin-bottom: 1rem;
       color: #2c2f48;
     }
+
     .thank-you-box p {
       font-size: 1rem;
       color: #555;
       margin-bottom: 1.5rem;
     }
+
     .instructions {
       text-align: left;
       background: #f1f3f7;
       padding: 1rem 1.25rem;
       border-radius: 8px;
       margin-bottom: 1.5rem;
+      color: #000000; /* Ensures black text */
     }
+
     .instructions ol {
       padding-left: 1.2rem;
     }
+
     .instructions li {
       margin-bottom: 0.75rem;
+      color: #000000; /* Ensures black text */
     }
+
     .discord-button {
       background-color: #5865F2;
       color: #fff;
@@ -69,9 +111,11 @@
       transition: background-color 0.3s;
       display: inline-block;
     }
+
     .discord-button:hover {
       background-color: #4752c4;
     }
+
     footer {
       text-align: center;
       padding: 1rem 0;
@@ -82,7 +126,8 @@
   </style>
 </head>
 <body>
-<nav>
+
+  <nav>
     <h1><a href="index.html" class="logo-link">CoreBots</a></h1>
     <ul>
       <li><a href="plans.html">Plans</a></li>
@@ -90,6 +135,7 @@
       <li><a href="faq.html">FAQ</a></li>
     </ul>
   </nav>
+
   <main>
     <div class="thank-you-box">
       <h2>Thank You for Your Purchase!</h2>
