--- a/after_payment.html
+++ b/after_payment.html
@@ -104,7 +104,7 @@
         <ol>
           <li>Click the button below to join our Discord server.</li>
           <li>In the Discord, go to <strong>#after-order</strong> and create a ticket.</li>
-          <li>Once your ticket is open, upload a screenshot or receipt of your PayPal payment.</li>
+          <li>Once your ticket is open, upload a screenshot or receipt of your payment.</li>
           <li>Our staff will review it and assist you as soon as possible.</li>
         </ol>
       </div>
