--- a/payment.html
+++ b/payment.html
@@ -28,7 +28,7 @@
         <h4>Plan A – Code Only</h4>
         <p class="plan-desc">Source code only. No hosting or support.</p>
         <p class="plan-price">$5.99 one-time</p>
-        <a href="https://idcxxxx1.github.io/corebots/after_payment.html" target="_blank" class="stripe-button">Buy Now</a>
+        <a href="https://buy.stripe.com/test_cNi7sNgnl6n6enw4jE1ZS00" target="_blank" class="stripe-button">Buy Now</a>
       </div>
 
       <!-- Plan B -->
