--- a/plans.html
+++ b/plans.html
@@ -36,8 +36,8 @@
 
   <section class="payment-methods">
     <h3>Payment Methods</h3>
-    <p>We accept payments via <strong>PayPal</strong> only.</p>
-    <p>This is a secure transaction paid through our business account.</p>
+    <p>We accept payments via <strong>various methods</strong>.</p>
+    <p>This is a secure transaction paid through stripe.</p>
   </section>
   <section class="interest">
     <h2>Are you interested?</h2>
