--- a/after_payment.html
+++ b/after_payment.html
@@ -109,7 +109,7 @@
         </ol>
       </div>
 
-      <a href="https://discord.gg/9RmRzXcaFH" target="_blank" class="discord-button">Join Discord</a>
+      <a href="https://discord.gg/uk6J2apd8e" target="_blank" class="discord-button">Join Discord</a>
     </div>
   </main>
 
