--- a/plans.html
+++ b/plans.html
@@ -22,7 +22,7 @@
   <section class="plans">
     <div class="plan">
       <h3>Plan A – Code Only</h3>
-      <p>Just the source code. No hosting, no support.</p>
+      <p>Just the source code. No hosting, no support and no customization.</p>
       <p>Includes commands: /startup, /settingup, /ea, /release, /reinvites, /end</p>
       <p class="price">$5.99 one-time</p>
     </div>
