--- a/faq.html
+++ b/faq.html
@@ -21,7 +21,7 @@
     <h2 style="text-align: center;">Frequently Asked Questions</h2>
     <ul style="max-width: 800px; margin: auto; line-height: 1.75rem;">
       <li><strong>1. Who is this bot for?</strong><br>Small to mid-sized Greenville RP servers who need basic session control tools.</li><br>
-      <li><strong>2. What does Plan A include?</strong><br>Only the bot source code, with no setup, no support, no hosting and no customization.</li><br>
+      <li><strong>2. What does Plan A include?</strong><br>Only the bot source code (python), with no setup, no support, no hosting and no customization.</li><br>
       <li><strong>3. What does Plan B include?</strong><br>A custom hosted bot based on the code of Plan A and support.</li><br>
       <li><strong>5. What support do you offer?</strong><br>Plan B includes support for the hosted bot. Plan A has no support.</li><br>
       <li><strong>6. Do you update the bot?</strong><br>No the code for both plans is as is, exceptions can be made on rare occasions.</li><br>
