--- a/payment.html
+++ b/payment.html
@@ -26,7 +26,7 @@
       <!-- Plan A -->
       <div class="plan-card">
         <h4>Plan A – Code Only</h4>
-        <p class="plan-desc">Source code only. No hosting or support.</p>
+        <p class="plan-desc">Source code only (python). No hosting or support.</p>
         <p class="plan-price">$5.99 one-time</p>
         <a href="https://buy.stripe.com/7sY3cu1zy0ID9e9amT77O00" target="_blank" class="stripe-button">Buy Now</a>
       </div>
