--- a/plans.html
+++ b/plans.html
@@ -23,7 +23,7 @@
     <div class="plan">
       <h3>Plan A – Code Only</h3>
       <p>Just the source code (python). No hosting, no support and no customization.</p>
-      <p>Includes commands: /startup, /settingup, /ea, /release, /reinvites, /end</p>
+      <p>Includes commands: /startup, /settingup, /ea, /release, /reinvites, /end and /cohost</p>
       <p class="price">$5.99 one-time</p>
     </div>
     <div class="plan">
