--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>CoreBots – Discord Bot Hosting</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/png" href="IMG_0975.PNG">
 </head>
 <body>
 
