--- a/order.html
+++ b/order.html
@@ -6,6 +6,7 @@
   <title>CoreBots – Order</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/png" href="/favicon.png">
   
   <!-- PayPal SDK (Plan A + Plan B) -->
   <script 
