--- a/faq.html
+++ b/faq.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>CoreBots – FAQ</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" href="/favicon.png">
+  <link rel="icon" type="image/png" href="/IMG_0975.PNG">
 </head>
 <body>
 
