--- a/order.html
+++ b/order.html
@@ -46,9 +46,11 @@
 <div class="continue-box">
   <form id="order-form">
     <label style="display: block; margin-bottom: 10px;">
-      <input type="checkbox" id="agree" required>
-      I have read and agree to the 
-      <a href="order-policy.html" target="_blank">CoreBots Order Policy</a>.
+       <input type="checkbox" id="agree" required>
+  I have read and agree to the 
+  <a href="order-policy.html" target="_blank">Order Policy</a>, 
+  <a href="terms.html" target="_blank">Terms of Service</a>, and 
+  <a href="privacy.html" target="_blank">Privacy Policy</a>.
     </label>
 
     <button type="submit" class="continue-button">Continue to Order</button>
