--- a/order.html
+++ b/order.html
@@ -86,8 +86,10 @@
   </section>
 </main>
   <footer>
-    &copy; 2025 CoreBots. All rights reserved.
-  </footer>
+  &copy; 2025 CoreBots. All rights reserved. |
+  <a href="terms.html">Terms of Service</a> |
+  <a href="privacy.html">Privacy Policy</a>
+</footer>
 
 </body>
 </html>
