--- a/order.html
+++ b/order.html
@@ -86,7 +86,7 @@
   </section>
 </main>
   <footer>
-  &copy; 2025 CoreBots. All rights reserved. |
+  &copy; 2025 CoreBots. All rights reserved.<br>
   <a href="terms.html">Terms of Service</a> |
   <a href="privacy.html">Privacy Policy</a>
 </footer>
