--- a/index.html
+++ b/index.html
@@ -84,8 +84,10 @@
   </section>
   
   <footer>
-    &copy; 2025 CoreBots. All rights reserved.
-  </footer>
+  &copy; 2025 CoreBots. All rights reserved.<br>
+  <a href="terms.html">Terms of Service</a> |
+  <a href="privacy.html">Privacy Policy</a>
+</footer>
 
 </body>
 </html>
