--- a/payment.html
+++ b/payment.html
@@ -45,8 +45,9 @@
 </main>
 
   <footer>
-    &copy; 2025 CoreBots. All rights reserved.
-  </footer>
-
+  &copy; 2025 CoreBots. All rights reserved.<br>
+  <a href="terms.html">Terms of Service</a> |
+  <a href="privacy.html">Privacy Policy</a>
+</footer>
 </body>
 </html>
