--- a/plans.html
+++ b/plans.html
@@ -49,8 +49,10 @@
 
 
   <footer>
-    &copy; 2025 CoreBots. All rights reserved.
-  </footer>
+  &copy; 2025 CoreBots. All rights reserved.<br>
+  <a href="terms.html">Terms of Service</a> |
+  <a href="privacy.html">Privacy Policy</a>
+</footer>
 
 </body>
 </html>
