--- a/after_payment.html
+++ b/after_payment.html
@@ -6,7 +6,7 @@
   <title>Thank You – CoreBots</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" type="image/png" href="/IMG_0975.PNG">
+  <link rel="icon" type="image/png" href="https://www.core-systems.xyz/IMG_0975.PNG">
   <style>
     body {
       font-family: 'Inter', sans-serif;
