--- a/payment.html
+++ b/payment.html
@@ -21,7 +21,7 @@
 
   <main>
   <section class="stripe-order">
-    <h2>Choose a Plan to Purchase</h2>
+     <h2 style="text-align: center;">Choose a Plan to Purchase</h2>
     <div class="plan-selection">
 
       <!-- Plan A -->
