--- a/order.html
+++ b/order.html
@@ -42,9 +42,9 @@
     <label style="display: block; margin-bottom: 10px;">
        <input type="checkbox" id="agree" required>
   I have read and agree to the 
-  <a href="order-policy.html" target="_blank">Order Policy</a>, 
-  <a href="terms.html" target="_blank">Terms of Service</a>, and 
-  <a href="privacy.html" target="_blank">Privacy Policy</a>.
+  <a href="order-policy.pdf" target="_blank">Order Policy</a>, 
+  <a href="terms.pdf" target="_blank">Terms of Service</a>, and 
+  <a href="privacy.pdf" target="_blank">Privacy Policy</a>.
     </label>
 
     <button type="submit" class="continue-button">Continue to Order</button>
