--- a/payment.html
+++ b/payment.html
@@ -46,8 +46,8 @@
 
   <footer>
   &copy; 2025 CoreBots. All rights reserved.<br>
-  <a href="terms.html">Terms of Service</a> |
-  <a href="privacy.html">Privacy Policy</a>
+  <a href="terms.pdf">Terms of Service</a> |
+  <a href="privacy.pdf">Privacy Policy</a>
 </footer>
 </body>
 </html>
