--- a/index.html
+++ b/index.html
@@ -19,6 +19,33 @@
     </ul>
   </nav>
 
+  <div style="text-align:center; margin:20px 0;">
+  <a href="https://discord.gg/uk6J2apd8e" target="_blank" rel="noopener" 
+     style="
+       display: inline-flex; 
+       align-items: center; 
+       background-color: #5865F2; 
+       color: white; 
+       font-weight: 600; 
+       font-family: 'Inter', sans-serif; 
+       font-size: 1.1rem; 
+       padding: 12px 24px; 
+       border-radius: 30px; 
+       text-decoration: none; 
+       box-shadow: 0 4px 10px rgba(88, 101, 242, 0.4);
+       transition: background-color 0.3s ease, box-shadow 0.3s ease;
+       user-select: none;
+     "
+     onmouseover="this.style.backgroundColor='#4752c4'; this.style.boxShadow='0 6px 14px rgba(71, 82, 196, 0.6)';"
+     onmouseout="this.style.backgroundColor='#5865F2'; this.style.boxShadow='0 4px 10px rgba(88, 101, 242, 0.4)';"
+  >
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" style="margin-right:10px; fill:white;" aria-hidden="true">
+      <path fill="#FFFFFF" d="M20.317 4.3698a19.7913 19.7913 0 00-4.8851-1.5152.0741.0741 0 00-.0785.0371c-.211.3753-.4447.8648-.6083 1.2495-1.8447-.2762-3.68-.2762-5.4868 0-.1636-.3933-.4058-.8742-.6177-1.2495a.077.077 0 00-.0785-.037 19.7363 19.7363 0 00-4.8852 1.515.0699.0699 0 00-.0321.0277C.5334 9.0458-.319 13.5799.0992 18.0578a.0824.0824 0 00.0312.0561 19.9 19.9 0 006.057 3.0874.0777.0777 0 00.0842-.0276c.4676-.6304.8883-1.2952 1.248-1.9942a.076.076 0 00-.0416-.1057 12.2986 12.2986 0 01-1.713-.8237.077.077 0 01-.0076-.1277c.115-.086.23-.17.338-.2576a.0743.0743 0 01.0786-.0105c3.577 1.6316 7.455 1.6316 11.0024 0a.0739.0739 0 01.0795.0095c.109.088.224.172.338.2576a.077.077 0 01-.006.1277 12.26 12.26 0 01-1.714.8237.0766.0766 0 00-.0407.106c.36.698.7807 1.3628 1.2483 1.9932a.076.076 0 00.0842.028 19.913 19.913 0 006.056-3.087.082.082 0 00.0313-.0552c.5004-5.177-.8382-9.6739-3.5485-13.66a.061.061 0 00-.0312-.0286zM8.02 15.3312c-1.1825 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9555-2.4189 2.157-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.9555 2.4189-2.1569 2.4189zm7.9748 0c-1.1824 0-2.1568-1.0857-2.1568-2.419 0-1.3332.9554-2.4189 2.1568-2.4189 1.2108 0 2.1758 1.0952 2.1569 2.419 0 1.3332-.9461 2.4189-2.1569 2.4189z"/>
+    </svg>
+    Join our Discord
+  </a>
+</div>
+
 
   <header>
     <h2>CoreBots</h2>
