--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </ul>
   </nav>
 
-  <div style="text-align:center; margin:20px 0;">
+ <div style="text-align:center; margin:10px 0 30px 0;">
   <a href="https://discord.gg/uk6J2apd8e" target="_blank" rel="noopener" 
      style="
        display: inline-flex; 
@@ -45,6 +45,7 @@
     Join our Discord
   </a>
 </div>
+
 
 
   <header>
