--- a/index.html
+++ b/index.html
@@ -12,20 +12,23 @@
 
   <nav>
   <h1><a href="index.html" class="logo-link">CoreBots</a></h1>
-  <ul>
-    <li><a href="plans.html">Plans</a></li>
-    <li><a href="order.html">Order</a></li>
-    <li><a href="faq.html">FAQ</a></li>
-  </ul>
+
+  <div class="nav-links">
+    <ul>
+      <li><a href="plans.html">Plans</a></li>
+      <li><a href="order.html">Order</a></li>
+      <li><a href="faq.html">FAQ</a></li>
+    </ul>
+  </div>
 
   <a href="https://discord.gg/uk6J2apd8e" target="_blank" rel="noopener" class="discord-button" aria-label="Join our Discord">
-    <!-- Discord SVG Icon -->
     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-      <path fill="#FFFFFF" d="M20.317 4.3698a19.7913 19.7913 0 00-4.8851-1.5152..."></path>
+      <path fill="#FFFFFF" d="M20.317 4.3698a19.7913 19.7913 0 00-4.8851-1.5152c-.21.366-.444.866-.608 1.248a18.566 18.566 0 00-5.487 0c-.164-.39-.41-.883-.62-1.248a19.7362 19.7362 0 00-4.8852 1.515.354.354 0 00-.158.13C2.865 9.0458 1.846 13.5718 2.298 18.0578a.44.44 0 00.126.275 19.9197 19.9197 0 006.16 3.15.36.36 0 00.393-.13c.47-.64.888-1.316 1.243-2.023a.342.342 0 00-.19-.48 13.75 13.75 0 01-1.947-1.1c.163-.12.326-.243.482-.373a.333.333 0 01.345-.047c4.072 1.86 8.48 1.86 12.499 0a.332.332 0 01.35.05c.157.13.32.252.482.37a13.15 13.15 0 01-1.946 1.1.34.34 0 00-.19.48c.36.707.78 1.384 1.244 2.024a.36.36 0 00.393.13 19.9264 19.9264 0 006.16-3.15.44.44 0 00.126-.276c.5-5.177-.838-9.677-3.548-13.557a.357.357 0 00-.158-.129zM8.02 15.331c-1.182 0-2.156-1.085-2.156-2.419 0-1.333.955-2.418 2.157-2.418 1.21 0 2.175 1.095 2.156 2.419 0 1.333-.955 2.418-2.157 2.418zm7.974 0c-1.182 0-2.156-1.085-2.156-2.419 0-1.333.955-2.418 2.157-2.418 1.21 0 2.176 1.095 2.156 2.419 0 1.333-.946 2.418-2.157 2.418z"/>
     </svg>
     Join Discord
   </a>
 </nav>
+
 
 
   <header>
