--- a/index.html
+++ b/index.html
@@ -88,5 +88,9 @@
   <a href="privacy.pdf">Privacy Policy</a>
 </footer>
 
+<a href="https://discord.gg/uk6J2apd8e" target="_blank" rel="noopener noreferrer" class="discord-floating-btn" aria-label="Join our Discord">
+  Join Discord
+</a>
+
 </body>
 </html>
