--- a/order.html
+++ b/order.html
@@ -84,6 +84,10 @@
   <a href="terms.pdf">Terms of Service</a> |
   <a href="privacy.pdf">Privacy Policy</a>
 </footer>
+<a href="https://discord.gg/uk6J2apd8e" target="_blank" rel="noopener noreferrer" class="discord-floating-btn" aria-label="Join our Discord">
+  Join Discord
+</a>
 
+  
 </body>
 </html>
