--- a/index.html
+++ b/index.html
@@ -92,5 +92,27 @@
   Join Discord
 </a>
 
+  <!-- Popup Modal -->
+<div id="popup" class="popup-overlay">
+  <div class="popup-content">
+    <span class="popup-close" onclick="closePopup()">✖</span>
+    <h2>🚧 We're Still Working</h2>
+    <p>
+      Core Systems is currently in development.<br />
+      Orders won't be processed until our official launch.<br />
+      Thank you for your patience!
+    </p>
+  </div>
+</div>
+<script>
+  function closePopup() {
+    document.getElementById("popup").style.display = "none";
+  }
+
+  window.onload = function () {
+    document.getElementById("popup").style.display = "flex";
+  };
+</script>
+
 </body>
 </html>
