--- a/index.html
+++ b/index.html
@@ -98,9 +98,8 @@
     <span class="popup-close" onclick="closePopup()">✖</span>
     <h2>🚧 We're Still Working</h2>
     <p>
-      Core Systems is currently in development.<br />
-      Orders won't be processed until our official launch.<br />
-      Thank you for your patience!
+      Core Systems is currently in development, this means orders won't be processed until our official launch.<br />
+      <strong> Thank you for understanding and we're sorry for any inconvenience caused.</strong>
     </p>
   </div>
 </div>
