--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
 <div id="popup" class="popup-overlay">
   <div class="popup-content">
     <span class="popup-close" onclick="closePopup()">✖</span>
-    <h2>🚧 We're Still Working</h2>
+    <h2>🚧 We're still working 🚧</h2>
     <p>
-      Core Systems is currently in development, this means orders won't be processed until our official launch.<br />
+      Core Systems is currently in development, this means orders won't be processed until our official launch.<br /> <br />
       <strong> Thank you for understanding and we're sorry for any inconvenience caused.</strong>
     </p>
   </div>
