--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
   <!-- Popup Modal -->
 <div id="popup" class="popup-overlay">
   <div class="popup-content">
-    <span class="popup-close" onclick="closePopup()">✖</span>
+    <span class="popup-close" onclick="closePopup()">×</span>
+
     <h2>🚧 We're still working 🚧</h2>
     <p>
       Core Systems is currently in development, this means orders won't be processed until our official launch.<br /> <br />
