--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <h2>🚧 We're still working 🚧</h2>
     <p>
-      Core Systems is currently in development, this means orders won't be processed until our official launch.<br /> <br />
+      CoreBots is currently in development, this means orders won't be processed until our official launch.<br /> <br />
       <strong> Thank you for understanding and we're sorry for any inconvenience caused.</strong>
     </p>
   </div>
