--- a/order.html
+++ b/order.html
@@ -87,6 +87,27 @@
 <a href="https://discord.gg/uk6J2apd8e" target="_blank" rel="noopener noreferrer" class="discord-floating-btn" aria-label="Join our Discord">
   Join Discord
 </a>
+<!-- Popup Modal -->
+<div id="popup" class="popup-overlay">
+  <div class="popup-content">
+    <span class="popup-close" onclick="closePopup()">×</span>
+
+    <h2>🚧 We're still working 🚧</h2>
+    <p>
+      CoreBots is currently in development, this means orders won't be processed until our official launch.<br /> <br />
+      <strong> Thank you for understanding and we're sorry for any inconvenience caused.</strong>
+    </p>
+  </div>
+</div>
+<script>
+  function closePopup() {
+    document.getElementById("popup").style.display = "none";
+  }
+
+  window.onload = function () {
+    document.getElementById("popup").style.display = "flex";
+  };
+</script>
 
   
 </body>
