--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to bottom right, #6f42c1, #000);
+      background: linear-gradient(to bottom right, #7F07A3, #000);
       color: #fff;
       display: flex;
       flex-direction: column;
@@ -33,7 +33,7 @@
     a {
       display: inline-block;
       padding: 0.75rem 1.5rem;
-      background-color: #8c4dff;
+      background-color: #5C068A;
       color: #fff;
       text-decoration: none;
       border-radius: 6px;
@@ -47,7 +47,7 @@
 </head>
 <body>
   <h1>Whoops.</h1>
-  <p>Everyone gets lost sometimes.<br />This page doesn’t exist.</p>
+  <p>Everyone gets lost sometimes.<br />404 Error - This page doesn’t exist.</p>
   <a href="/">Return to Homepage</a>
 </body>
 </html>
