--- a/404.html
+++ b/404.html
@@ -47,7 +47,7 @@
 </head>
 <body>
   <h1>Whoops.</h1>
-  <p>Everyone gets lost sometimes.<br />404 Error - This page doesn’t exist.</p>
+  <p>Everyone gets lost sometimes.<br /> <br/>404 Error - This page doesn’t exist.</p>
   <a href="/">Return to Homepage</a>
 </body>
 </html>
