--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" type="image/png" href="https://www.core-systems.xyz/IMG_0975.PNG">
+<!-- Basic Meta -->
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>CoreBots — Custom Greenville RP Session Bots</title>
+<meta name="description" content="Clean, reliable bots for managing Greenville RP sessions. Designed for hosts and co-hosts.">
+
+<!-- Open Graph / Discord Embed -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://core-systems.xyz">
+<meta property="og:title" content="CoreBots — Custom Greenville RP Session Bots">
+<meta property="og:description" content="Clean, reliable bots for managing Greenville RP sessions. Purpose-built, simple, and secure.">
+<meta property="og:image" content="https://media.discordapp.net/attachments/1244521459334910043/1396210466610614406/CoreBots.png?ex=6881df13&is=68808d93&hm=44fc2cdf0a5b9b14320ce84732a2111a49b63dbf1d00fb72cc5ee69bce243061&=&format=webp&quality=lossless&width=1625&height=375">
 </head>
 <body>
 
